[package]
name = "get_outline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "blocking", "json"] }
thiserror = "1.0.50"
serde = { version = "1.0.192", features = ["derive"] }
dotenvy = "0.15.7"
